# d2l-code

./: .gitignore  AGENTS.md  Makefile  dashboard_server.py  pyproject.toml  submission.csv
attention_transformer/: ViT.py  attn_test.py  bahdanau_attn.py  transformer.py
docs/: experiment_dashboard.html
houseprice_kaggle/: data.py  house_price.py  main.py
hpo_optim_experiment/: custom_optim_template.py  densenet_optim.py  hpo_models.py  hpo_worker.py  launch_densenet_hpo.py  launch_hpo.py  optuna_test.py  pruning_trainer.py  ray_tune_test.py  resnet_optim.py  simple_tune.py  vit_optim.py
lenet/: lenet-visualize.py  lenet.py  lenet_modern.py
linear_classification/: classification_concise.py  classification_no_d2l.py  mps_trainer.py
linear_regression/regression_concise/: regression_concise.py  regression_concise_d2l.py
lr-scheduling/: densenet_lr_schedule.py  resnet_pre_act_lr_schedule.py
mlp/: dropout.py  mlp_concise.py  mlp_no_d2l.py
modern_cnns/: alexnet.py  batch_norm.py  densenet.py  googlenet.py  googlenet_batch_norm.py  layer_norm.py  nin.py  resnet.py  resnet_pre_act.py  resnext.py  vgg.py  vgg_improved.py
modern_rnns/: gru.py  lstm.py  mt_data_test.py  seq2seq_mt.py
rnn/: lstm.py  rnn_concise.py  rnn_cross_book_eval.py  rnn_scratch.py  sin_pred.py  test_ce.py  text_data_test.py  text_sequence_tests.py
tools/: model_loader.py  model_registry.py  model_summary.py  plot_densenet_lr_momentum.py  profile_flops.py
utils/: __init__.py  attn.py  enc_dec.py  io.py  logging.py  rnnlm.py  test_topk.py  training_config.py
utils/classfication/: data.py  (+2 more)
(+26 files in other folders)
