[project]
name = "d2l-code"
version = "0.1.0"
description = "Local utilities and examples for Dive into Deep Learning"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "torchvision>=0.21",
    "torchaudio>=2.6",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "scipy>=1.14",
    "tqdm>=4.66",
    "requests>=2.31",
    "pillow>=10.0",
    "torchinfo>=1.8",
    "ptflops>=0.7",
]

[project.optional-dependencies]
jupyter = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.uv]

[dependency-groups]
dev = []
